WE-6937 - Added tests